infra/k8s/auth-db-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-db
  template:
    metadata:
      labels:
        app: auth-db
    spec:
      containers: 
        - name: auth-db
          image: postgres:latest
          resources:
            limits:
              memory: "256Mi"
              cpu: "2000m"
            requests:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: auth-db-service
spec:
  selector:
    app: auth-db
  ports:
    - name: auth-db
      protocol: TCP
      port: 5432
      targetPort: 5432
