infra/k8s/auth-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-database-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-database
  template:
    metadata:
      labels:
        app: auth-database
    spec:
      containers:
      - name: auth-database
        image: postgres
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service 
metadata: 
  name: auth-database-service
spec:
  selector: 
    app: auth-database
  ports:
    - name: auth-database
      protocol: TCP
      port: 5432
      targetPort: 5432
