infra/k8s/query-preprocessing-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-preprocessing-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query-preprocessing
  template:
    metadata:
      labels:
        app: query-preprocessing
    spec:
      containers:
      - name: query-preprocessing
        image: adityabhattad/query-preprocessing
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: query-preprocessing-service
spec:
  selector:
    app: query-preprocessing
  type: ClusterIP
  ports:
    - name: query-preprocessing
      protocol: TCP
      port: 8000
      targetPort: 80
