infra/k8s/question_anwer_manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qa-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: question-answer
  template:
    metadata:
      labels:
        app: question-answer
    spec:
      containers:
        - name: question-answer
          image: adityabhattad/question-answer
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: qa-service
spec:
  selector:
    app: question-answer
  type: ClusterIP
  ports:
    - name: question-answer
      protocol: TCP
      port: 8000
      targetPort: 80
