infra/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  labels:
    name: ingress-service
spec:
  rules:
  - host: medbot.xyz
    http:
      paths:
      - path: /api/chat/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: qa-service
            port:
              number: 8000
      - path: /api/rag/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: rag-uploader-service
            port: 
              number: 8000
